backend-upstream-app/app-deploy.yaml
apiVersion: v1
kind: Namespace
metadata: 
   name: k8-booster-oauth2

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnativebasicspring-deployment
  namespace: k8-booster-oauth2
spec:
  selector:
    matchLabels:
      app: cloudnativebasicspring
  replicas: 2
  template:
    metadata:
      labels:
        app: cloudnativebasicspring
    spec:
      containers:
      - name: cloudnativebasicspring
        image: fharris/cloudnativebasic-spring-docker:latest
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: cloudnativebasicspring-service
  namespace: k8-booster-oauth2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cloudnativebasicspring
